--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "vitest": "^1.2.0",
-    "postcss": "8.4.38",
-    "autoprefixer": "10.4.19",
-    "tailwindcss": "3.4.2",
-    "@skeletonlabs/skeleton": "2.9.0",
-    "@skeletonlabs/tw-plugin": "0.3.1",
-    "vite-plugin-tailwind-purgecss": "0.2.0",
-    "@tailwindcss/typography": "0.5.11",
+    "@skeletonlabs/skeleton": "^2.10.0",
+    "@skeletonlabs/tw-plugin": "^0.4.0",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/kit": "^2.5.10",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "@tailwindcss/forms": "0.5.7",
-    "@types/node": "20.11.30"
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/eslint": "^8.56.10",
+    "@types/mapbox-gl": "^3.1.0",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "^9.3.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0-next.4",
+    "lucide-svelte": "^0.379.0",
+    "mapbox-gl": "^3.4.0",
+    "postcss": "8.4.38",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.2.3",
+    "svelte": "^5.0.0-next.1",
+    "svelte-check": "^3.7.1",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.12",
+    "vite-plugin-tailwind-purgecss": "^0.3.3",
+    "vitest": "^1.6.0"
   },
-  "type": "module",
-  "dependencies": {
-    "lucide-svelte": "^0.363.0"
-  }
+  "type": "module"
 }
